# SpaceGameRust

./: .gitignore  Cargo.toml  README.md
src/: main.rs  state.rs
src/components/: components.rs
src/entities/: mod.rs  player.rs  ship.rs
src/plugins/: background.rs  camera.rs  entity_info.rs  infinite_background.rs  loading.rs  map.rs  mod.rs  parallax_background.rs  player.rs  projectile.rs  world.rs
